fixed styling issue on smaller screens

--- a/server-monitor/server-monitor.css
+++ b/server-monitor/server-monitor.css
@@ -126,7 +126,9 @@ body {
 }
 
 .detail_left {
-    flex-basis: 430px;
+    flex-basis: auto;
+    width: 430px;
+    max-width: 100%;
     flex-shrink: 1;
     flex-grow: 0;
 }
@@ -160,7 +162,7 @@ body {
 }
 
 .graph_container {
-    width: 100%;
+    max-width: 100%;
     height: 300px;
     background-color: #eee;
     display: flex;
